tests/cases/parser/literals/characters/combining_marks.hash
// run=fail, stage=parse

main := () => {
    // Single combining mark.
    spade  := '♠️'

    // Multiple combining characters.
    bing   := 'ṩ̂̊'

    // Suggest to write the normalised character.
    a_ring := 'Å'
    happy  := '☺️'

    // This shouldn't print the combining characters suggestions.
    bing_happy := 'ṩ̂̊☺️'
}
